# github-issue-triage

./: .gitignore  BUYER_DISCOVERY.md  DECISIONS.md  HANDOFF.md  LICENSE  PRODUCT_REPORT.md  README.md  SUBMISSION_CHECKLIST.md  SUBMISSION_REVIEW.md  alembic.ini  pyproject.toml
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: main.test.tsx  main.tsx  styles.css
demo/: README.md
demo/evaluations/: retrospective-v1.json
demo/seed/: demo-manifest.json  triage-demo.db
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_llm_call_latency.py  0003_investigation_validation.py  0004_investigation_classification.py  0005_investigation_issue_title.py  0006_llm_call_attribution.py  0007_codex_cost_unavailable.py  0008_behavior_gap_verdict.py  0009_webhook_jobs.py  0010_investigation_test_runner.py  0011_durable_job_queue.py  0012_budget_controls.py  0013_duplicate_similarity.py  0014_review_packets.py  0015_review_assessments.py  0016_review_consensus.py  0017_posting_approvals.py  0018_review_telemetry.py  0019_weekly_reports.py  0020_corpus_exports.py  (+3 more)
scripts/: export_demo.py  seed_demo.py  validate_demo_seed.py
spike/: Dockerfile  README.md  run_spike.py
triage/: __init__.py  automation_eligibility.py  batch.py  cli.py  pilot_reports.py  pilot_sessions.py  posting_approvals.py  preflight.py  provider_comparison.py  providers.py  replay.py  retrospective_evaluation.py  review_assessments.py  review_consensus.py  review_packets.py  review_telemetry.py  semantic_corpus.py  semantic_review.py
(+261 files in other folders)
